fixed multiple errors in node to get things working

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../../../favicon.ico">
 
-  <title>Mongoose Denver Post</title>
+  <title>Mongoose Gazette</title>
 
   {{!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/dashboard/"> --}}
 
@@ -27,7 +27,7 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        Current Source: Denver Post Articles
+        Current Source: Gazette Articles
         {{!-- <a class="nav-link" href="#">Sign out</a> --}}
       </li>
     </ul>
