got page loading, getting ready to test db functions

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -107,7 +107,7 @@
           </button> --}}
           </div>
         </div>
-        {{{body}}
+        {{{body}}}
         <div class="article-list">
           <div class="no-article-warning">
             <div class="alert alert-warning text-center">
