--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -1,33 +1,30 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    {{!-- <link rel="icon" href="../../../../favicon.ico"> --}}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../../../favicon.ico">
+    <title>Mongoose Gazette</title>
 
-  <title>Mongoose Gazette</title>
+    {{!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/dashboard/"> --}}
 
-  {{!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/dashboard/"> --}}
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
-  <link href="app/public/css/dashboard.css" rel="stylesheet">
-  <link rel="stylesheet" href="app/public/css/sytle.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <!-- Custom styles for this template -->
+    <link href="/css/dashboard.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body>
+    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Mongoose Scraper</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        Current Source: Gazette Articles
+          Current Source: Gazette Articles
         {{!-- <a class="nav-link" href="#">Sign out</a> --}}
       </li>
     </ul>
@@ -46,7 +43,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link saved-articles-button" href="#">
-                <span data-feather="file"></span>
+                <span data-feather="saved-articles"></span>
                 Saved Articles
               </a>
             </li>
@@ -58,7 +55,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link scrape-new-button" href="#">
-                <span data-feather="new-artciles"></span>
+                <span data-feather="new-articles"></span>
                 Scrape New Articles
               </a>
             </li>
@@ -93,8 +90,7 @@
         </div>
       </nav>
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div
-          class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
           <h1 class="h2">Articles</h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
@@ -102,9 +98,9 @@
               <button type="button" class="btn btn-sm btn-outline-secondary">Clear</button>
             </div>
             {{!-- <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            <span data-feather="calendar"></span>
-            This week
-          </button> --}}
+              <span data-feather="calendar"></span>
+              This week
+            </button> --}}
           </div>
         </div>
         {{{body}}}
@@ -114,7 +110,7 @@
               <h4>We don't currently have any articles to show you</h4>
             </div>
             <div class="card">
-              <div class"card-header text-center">
+              <div class="card-header text-center">
                 <h3>What would you like to do?</h3>
               </div>
               <div class="card-body text-center">
@@ -124,20 +120,13 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
     </main>
   </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <script src="../../public/javascript/newscraper.js" type="javascript"></script>
-
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="/javascript/newscraper.js" type="text/javascript"></script>
 </body>
 </html>
